# rv-dock-pro-baremetal-experiments

./: .gitignore  CMakeLists.txt  Makefile  README.md
hello/: CMakeLists.txt  main.c
sys/: CMakeLists.txt  irq.c  kernel.c  lradc.c  mbox.c  plic.c  printf_config.h  start.S  uart.c
sys/cmake/: toolchain-D1.cmake
sys/include/sys/: config.h  irq.h  kernel.h  lradc.h  mbox.h  plic.h  printf.h  sysdef.h  uart.h
who-am-i/: Makefile  art.c  art.h  main.c  start.S  sysdef.h  uart.c
whoami/: CMakeLists.txt  art.txt  main.c
